[gd_scene load_steps=2 format=2]

[ext_resource path="res://objects/common/HealthSystem.gd" type="Script" id=1]

[node name="HealthSystem" type="Node"]
script = ExtResource( 1 )

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
